# hadron

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  SECURITY.md  compile_commands.json  hadron  main.c  main.h  makefile
.github/: release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build.yml  c-cpp.yml  ci.yml  release.yml
docs/: grammar.ebnf
examples/: else_expr.hd  ffi.hd  other.hd  test.hd
include/: arguments.h  compiler.hpp  error.h  error.hpp  file.h  file.hpp  hadron.hpp  halloc.hpp  input.h  input.hpp  lexer.h  lexer.hpp  logger.h  logger.hpp  parser.h  parser.hpp  symbol.hpp  types.hpp  util.hpp  vm.h  vm.hpp
include/backend/: codegen.hpp
include/frontend/: ast.hpp  lexer.hpp  parser.hpp  scope.hpp  semantic.hpp  token.hpp  types.hpp  utils.hpp
src/: arguments.cpp  error.cpp  errors.c  errors.h  file.cpp  input.cpp  lexer.cpp  logger.cpp  main.cpp  parser.c  parser.cpp  parser.h  symbol.cpp  tokenizer.c  tokenizer.h  types.c  types.h  util.cpp  vm.cpp
src/backend/: codegen.cpp
src/compilers/: c.c  c.h  python.c  python.h
src/compilers/lib/: std.c  std.h
src/frontend/: ast.cpp  lexer.cpp  parser.cpp  semantic.cpp
src/lsp/: server.cpp
src/util/: args.h  array.c  array.h  bool.h  print.c  print.h  printtokens.c  printtokens.h  small.h  stack.c  stack.h  str.c  str.h  string.h
test/: test_lexer.cpp  test_parser.cpp  test_semantic.cpp
tests/: fib.hdn  main.c
